plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

bootRun {
	jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
			 "--add-opens=java.base/java.io=ALL-UNNAMED",
			 "--add-opens=java.base/java.util=ALL-UNNAMED",
			 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
			 "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
	])
}

group = 'ke.co.nectar.tokens'
version = '3.0.0-alpha'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation group: 'org.json', name: 'json', version: '20231013'
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version:'1.77'
	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version:'1.77'
	implementation group: 'joda-time', name: 'joda-time', version:'2.12.6'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.data:spring-data-redis'
	implementation 'redis.clients:jedis'
	implementation 'commons-codec:commons-codec'
	implementation 'org.postgresql:postgresql'
	implementation group: 'org.apache.thrift', name: 'libthrift', version: '0.18.1'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api'
	testImplementation 'junit:junit:4.13.1'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'com.jayway.jsonpath:json-path'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(Test).configureEach {
	jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
			 "--add-opens=java.base/java.io=ALL-UNNAMED",
			 "--add-opens=java.base/java.util=ALL-UNNAMED",
			 "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
			 "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"])
}
